# qtdock

./: CMakeLists.txt  GESTURES.md  mainwindow.cpp  mainwindow.h
